--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChatBot Restaurante</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Cargar variables de entorno PRIMERO -->
+    <script src="env.js"></script>
 </head>
 <body>
     <div class="chat-container">
