--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ChatBot Restaurante</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Cargar variables de entorno PRIMERO -->
-    <script src="env.js"></script>
+    <script src="env.local.js"></script>
 </head>
 <body>
     <div class="chat-container">
