fix: Agregar diagnóstico para verificar carga de variables de entorno

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="chat-header">
             <h1>🍽️ Asistente Virtual del Restaurante</h1>
             <p>¡Hola! ¿En qué puedo ayudarte hoy?</p>
+            <div id="configStatus" style="font-size: 0.75rem; margin-top: 0.5rem; padding: 0.25rem; background: rgba(255,255,255,0.1); border-radius: 4px;"></div>
         </div>
         
         <div class="chat-messages" id="chatMessages">
