fix: Corregir nombres de variables de entorno para Azure deployment

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+https://github.com/andrews0212/RestauranteChatBot<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
