--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-https://github.com/andrews0212/RestauranteChatBot<!DOCTYPE html>
+<DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
